--- a/soulTalk_frontend/package.json
+++ b/soulTalk_frontend/package.json
@@ -36,6 +36,9 @@
     "framer-motion": "^10.16.4",
     "image-cracker": "^1.0.2",
     "mdb-react-ui-kit": "^6.3.0",
+    "primeflex": "^3.3.1",
+    "primeicons": "^7.0.0",
+    "primereact": "^10.6.5",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-card-flip": "^1.2.2",
